Primer intento, se cambia el nombre de usuario del chat de acuerdo con el nombre de usuario.

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,8 @@
 
     <!-- Chat Pequeño -->
     <div id="chat" class="chat">
-        <div id='user-name' class="username">jhon
+        <div id='user-name' class="username">
+            <p id="UserNameChat">Jhon</p>
 
             <div class="button">
                 <button id="minimize" class="minimize">
