Cambio del boton enviar del chat secundario como icono de envio

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 
         </div>
 
-        <div id="chat-list" class="chat-list">
+        <div id="chat-window2" class="chat-window2">
 
             <div id="output2"></div>
             <div id="feedback2"></div>
@@ -49,7 +49,9 @@
         <div id="messages"></div>
 
         <input id="Mensaje2" class="textarea" type="text" placeholder="Envía un mensaje" />
-        <button id="Enviar2">Enviar Mensaje</button>
+        <button id="Enviar2">
+                <i class="material-icons">send</i>
+        </button>
 
     </div>
 
