--- a/public/index.html
+++ b/public/index.html
@@ -16,45 +16,30 @@
 
 <body>
     <!-- Chat principal -->
-        <div id="Chat">
-                <h2>Chat</h2>
-                <div id="chat-window">
-                    <div id="output"></div>
-                    <div id="feedback"></div>
-                </div>
-                <input id="Usuario" type="text" placeholder="Nombre del usuario" />
-                <input id="Mensaje" type="text" placeholder="Mensaje" />
-                <button id="Enviar">Enviar Mensaje</button>
-            </div>
-
-    <!-- Chat Pequeño -->
-    <div id="chat" class="chat">
-        <div id='user-name' class="username">
-            <p id="UserNameChat">Jhon</p>
-
-            <div class="button">
-                <button id="minimize" class="minimize">
-                    <i class="material-icons" onclick="MinimizeFunction()">remove</i>
-                </button>
-            </div>
-
+    <div id="Chat">
+        <h2>Chat</h2>
+        <div id="chat-window">
+            <div id="output"></div>
+            <div id="feedback"></div>
         </div>
-
-        <div id="chat-window2" class="chat-window2">
-
-            <div id="output2"></div>
-            <div id="feedback2"></div>
-            
-        </div>
-        <div id="messages"></div>
-
-        <input id="Mensaje2" class="textarea" type="text" placeholder="Envía un mensaje" />
-        <button id="Enviar2">
-                <i class="material-icons">send</i>
-        </button>
-
+        <input id="Usuario" type="text" placeholder="Nombre del usuario" />
+        <input id="Mensaje" type="text" placeholder="Mensaje" />
+        <button id="Enviar">Enviar Mensaje</button>
     </div>
 
+    <!-- Chat Pequeño -->
+
+    <div id="Chat2">
+        <h2>Chat</h2>
+        <div id="chat-window2">
+            <div id="output2"></div>
+            <div id="feedback2"></div>
+        </div>
+        <input id="Mensaje2" type="text" placeholder="Mensaje" />
+        <button id="Enviar2">
+            <i class="material-icons">send</i>
+        </button>
+    </div>
 
 </body>
 
