Configuracion de minimización ChatSecundario

--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,19 @@
     <!-- Chat Pequeño -->
 
     <div id="Chat2">
-        <h2>Chat</h2>
+
+        <div id='UsuarioMinimiza'>
+            <h2>User</h2>
+            <button id="BotonMinimiza">
+                <i class="material-icons">remove</i>
+            </button>
+        </div>
+
         <div id="chat-window2">
             <div id="output2"></div>
             <div id="feedback2"></div>
         </div>
+
         <input id="Mensaje2" type="text" placeholder="Mensaje" />
         <button id="Enviar2">
             <i class="material-icons">send</i>
