agregar funcionalidad de envio de datos con la tecla enter y primero intentos de enviar a un suario en especifico

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+
     <!-- Chat principal -->
     <div id="Chat">
         <h2>Chat</h2>
@@ -23,7 +24,9 @@
             <div id="feedback"></div>
         </div>
         <input id="Usuario" type="text" placeholder="Nombre del usuario" />
+        <input id="UsuarioPM" type="text" placeholder="Usuario al que enviara mensaje" />
         <input id="Mensaje" type="text" placeholder="Mensaje" />
+        <input id="MensajePrivado" type="text" placeholder="MensajePrivado" />
         <button id="Enviar">Enviar Mensaje</button>
     </div>
 
@@ -42,8 +45,9 @@
             <div id="output2"></div>
             <div id="feedback2"></div>
         </div>
-
+        
         <input id="Mensaje2" type="text" placeholder="Mensaje" />
+
         <button id="Enviar2">
             <i class="material-icons">send</i>
         </button>
