Bloqueo de variable de usuario para que no lo cambien y tratar de guardar parametros de usurio como JSon

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <input id="Usuario" type="text" placeholder="Nombre del usuario" />
         <input id="UsuarioPM" type="text" placeholder="Usuario al que enviara mensaje" />
         <input id="Mensaje" type="text" placeholder="Mensaje" />
-        <input id="MensajePrivado" type="text" placeholder="MensajePrivado" />
+        <input id="MensajePrivado" type="text" placeholder="Escribe un Mensaje Privado" />
         <button id="Enviar">Enviar Mensaje</button>
     </div>
 
