Funcionalidad de envio de mensjes privados

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
             <div id="feedback"></div>
         </div>
         <input id="Usuario" type="text" placeholder="Nombre del usuario" />
-        <input id="UsuarioPM" type="text" placeholder="Usuario al que enviara mensaje" />
+        <input id="UsuarioPM" type="text" placeholder="Usuario al que enviara mensaje Privado" />
         <input id="Mensaje" type="text" placeholder="Mensaje" />
-        <input id="MensajePrivado" type="text" placeholder="Escribe un Mensaje Privado" />
+        <input id="MensajePrivado" type="text" placeholder="Escribe un Mensaje Privado al usuario seleccionado" />
         <button id="Enviar">Enviar Mensaje</button>
     </div>
 
